demo/setup/base/platform.allow-ocp-kube-dns.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: platform.allow-ocp-kube-dns
spec:
  tier: platform
  order: 200
  selector: projectcalico.org/namespace != "acme"
  # selector: all()
  egress:
    - action: Allow
      destination:
        selector: k8s-app == "kube-dns"
    - action: Allow
      protocol: UDP
      destination:
        ports:
          - '5353'
  types:
    - Egress
